[tool.poetry]
name = "eryx-comm-docs"
version = "0.1.0"
description = "Documentation for npm package eryx-comm"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
sphinx_mdinclude = "^0.5.3"
mkdocs-material = "^9.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
